<resources>
    <string name="app_name">HospitEase</string>
    <string name="loading" />
    <string name="title_activity_loading">HospitEase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor">Doctor</string>
    <string name="doctort">Doctor</string>
    <string name="account">Account</string>
    <string name="reception">Reception</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="doctorb">Doctor</string>
    <string name="usernamet">Username</string>
    <string name="passwordt">Password</string>
    <string name="your_password" />
    <string name="loginbutton">Login</string>
    <string name="login_button" />
    <string name="login1">Login</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="your_password1">your_password</string>
    <string name="your_username1">your_username</string>
    <string name="login2">Login</string>
    <string name="doctor1">Doctor</string>
    <string name="doctor_icon">Doctor Icon</string>
    <string name="doctor2">Doctor</string>
    <string name="reception_icon">Reception Icon</string>
    <string name="reception2">Reception</string>
    <string name="account_icon">Account Icon</string>
    <string name="account2">Account</string>
    <string name="doctor_icon1">Doctor Icon</string>
    <string name="doctor_icon2">Doctor Icon</string>
    <string name="doctor3">Doctor</string>
    <string name="reception_icon2">Reception Icon</string>
    <string name="reception3">Reception</string>
    <string name="account_icon2">Account Icon</string>
    <string name="account3">Account</string>
    <string name="name">Name</string>
    <string name="specialty">Specialty</string>
    <string name="register">Register</string>
    <string name="add_edit_doctor">Add/Edit-Doctor</string>
    <string name="add_edit_receptionist">Add-Edit-Receptionist</string>
    <string name="add_edit_admin">Add/Edit Admin</string>
    <string name="add_edit_billing">Add/Edit Billing</string>
    <string name="todo">TODO</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="r_dash">My Dashboard</string>
    <string name="patient_registration">patient registration</string>
    <string name="check_in_out">Check-in/out</string>
    <string name="appointment_scheduling">Appointment scheduling</string>
    <string name="view_appointments">View Appointments</string>
    <string name="choose_doctor" />
    <string name="registered_patients_list">Registered Patients list</string>
    <string name="select_patient_prompt" />
    <string name="logout">LogOut</string>
</resources>