<!-- res/layout/activity_admin_login.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Username EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminUsernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/username"
            android:importantForAutofill="no"
            tools:ignore="Autofill,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/adminLoginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:onClick="onLoginButtonClick" />
</LinearLayout>
