<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/bgapps">

            <TextView
                android:id="@+id/txtview"
                android:text="Receptionist \n Dashboard"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <!-- Add the logout button -->

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ddash" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_below="@id/txtview"
                android:layout_marginTop="16dp"
                android:onClick="logoutAndNavigateToMainActivity"
               app:cornerRadius="8dp"
                app:backgroundTint="?attr/colorSecondary"/>

        </RelativeLayout>
        <GridLayout
            android:paddingTop="16dp"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- CardView for Patient Registration -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:elevation="6dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp">

            </androidx.cardview.widget.CardView>

            <!-- CardView for Registered Patients List -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:elevation="6dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/in"
                        android:importantForAccessibility="no"
                        android:contentDescription="@string/registered_patients_list" />

                    <Button
                        android:id="@+id/btnCheckInRegistration"
                        android:layout_width="167dp"
                        android:layout_height="74dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/registered_patients_list"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for Appointment Scheduling -->
            <androidx.cardview.widget.CardView
                android:layout_width="192dp"
                android:layout_height="wrap_content"

                android:elevation="6dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/registration"
                        android:importantForAccessibility="no"
                        android:contentDescription="@string/appointment_scheduling" />

                    <Button
                        android:id="@+id/btnNewAppointment"
                        android:layout_width="182dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/appointment_scheduling"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CardView for View Appointments -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:elevation="6dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/veiw"
                        android:importantForAccessibility="no"
                        android:contentDescription="@string/view_appointments" />

                    <Button
                        android:id="@+id/viewAppoints"
                        android:layout_width="176dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/view_appointments"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/patient_registration"
                    android:importantForAccessibility="no"
                    android:src="@drawable/reg" />

                <Button
                    android:id="@+id/btnAppointment"

                    android:layout_width="171dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/patient_registration"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </GridLayout>

    </LinearLayout>

</ScrollView>
